--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -19,7 +19,7 @@
                             
                             <tr>
                              <td class="col-xs-2">目標の体重</td>
-                             <td><%= current_customer.goal_weight %></td>
+                             <td><%= current_customer.goal_weight %>kg</td>
                             </tr>
                         </table>
 
