--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,21 +34,21 @@
                       </li>
       
                       <li>
-                      <%#= link_to public_items_path, class: "fas btn btn-light" do %>
-                      商品一覧
-                      <%# end %>
+                      <%= link_to weights_path, class: "fas btn btn-light" do %>
+                      体重管理
+                      <% end %>
                       </li>
       
                       <li>
-                      <%#= link_to public_cart_items_path, class: "fas btn btn-light" do %>
-                      カート
-                      <%# end %>
+                      <%= link_to meals_path, class: "fas btn btn-light" do %>
+                      食事管理
+                      <% end %>
                       </li>
       
                       <li>
-                      <%#= link_to destroy_customer_session_path, method: :delete, class: "fas btn btn-light" do %>
+                      <%= link_to destroy_customer_session_path, method: :delete, class: "fas btn btn-light" do %>
                       ログアウト
-                      <%# end %>
+                      <% end %>
                       </li>
       
                       
