--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -15,7 +15,7 @@
                     <%= form_with model: @weight, url: weights_path do |f| %>
                         <div class="form-group">
                             <%= f.text_field :current_weight, class: "form-control" %>kg<br>        
-                            <%= f.submit "新規登録", class: "btn btn-success mt-3 mx-auto" %>
+                            <%= f.submit "新しく登録する", class: "btn btn-success mt-3 mx-auto" %>
                         </div>
                     <% end %>
             </div>
@@ -36,7 +36,7 @@
                                 <td><%= weight.created_at.strftime('%Y/%m/%d') %></td>
                                 <td><%= weight.current_weight %>kg</td>
                                 <td>目標体重まであと<%= (weight.current_weight - current_customer.goal_weight) %>kg</td>
-                                <td><%= link_to "編集する", edit_weight_path(:id), class: "btn btn-success btn-sm" %></td>
+                                <td><%= link_to "編集する", edit_weight_path(weight), class: "btn btn-success btn-sm" %></td>
                             </tr>
                         <% end %>
                     </tbody>
