--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -23,8 +23,9 @@
                         <div class="actions col-xs-10 col-xs-offset-2">
                         <p>
                             <%= f.submit "編集内容を保存", class: "btn btn-primary col-sm-3", style: "margin: 10px;" %>
-                            <%#= link_to public_customers_unsubcribe_path, class: " btn btn-danger col-sm-3", style: "margin: 10px;" do %>
-                            退会する
+                                <%= link_to customers_unsubcribe_path, class: " btn btn-danger col-sm-3", style: "margin: 10px;" do %>
+                                退会する
+                                <% end %>
                 <% end %>
                         </p>
                         </div>
