--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Meals#index</h1>
-<p>Find me in app/views/meals/index.html.erb</p>
+<div class="container">
+    <div class="row">
+      <h10 style="background-color: #d3d3d3">食事一覧・登録</h>
+    </div>
+        <div class="row text-right">
+          <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-success btn-sm text-right ml-auto shadow-sm" %>
+        </div>
+
+            <div class="row">
+                <table class="table table-hover text-center">
+                    <thead>
+                        <tr>
+                            <th>登録日時</th>
+                            <th>料理名</th>
+                            <th>食事写真</th>
+                
+                        </tr>
+                    </thead>
+            
+                        <tbody>
+                            <% @meals.reverse_each do |meal| %>
+                                <tr>
+                                    <td><%= meal.created_at.strftime('%Y/%m/%d') %></td>
+                                    <td><%= meal.dish_name %></td>
+                                    <td><%= attachment_image_tag meal, :image, :fill, 200, 200, format: "jpeg", fallback: "no-image.jpg", size: "200x200" %></td>
+                                </tr>
+                            <% end %>
+                        </tbody>
+                </table>
+            </div>
+</div>
