--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,101 @@
  *= require_self
  */
 @import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  height: 50px;
+  background:#f7deb7;
+}
+
+.container {
+  position: relative;
+}
+
+.top {
+  font-weight: bold;
+  background: #f39c12;
+  color: #fff;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  transform: skew(-20deg);
+}
+
+.top h1 {
+  transform: skew(20deg);
+  font-size: 50px;
+  
+}
+
+.top h1:hover {
+  color: white;
+  text-decoration: none;
+  opacity: 1;
+}
+    
+
+.navigation {
+  position: relative;
+  top: 0px;
+  height: 200px;
+  width: 40px;
+  background:#f39c12;
+  text-decoration: none;
+  color: #000000;
+  box-shadow: 8px 8px 0 #4a4a4a;
+  border-radius: 5px;
+  border: solid;
+  border: 1px solid;
+  overflow-x: hidden;
+  transition: all 0.7s;
+}
+
+
+.navigation:hover {
+  width: 170px;
+  
+}
+
+.navigation ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: #000000;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+
+.navigation ul li {
+  list-style: none;
+  text-decoration: none;
+  display: block;
+  position: relative;
+  width: 100%;
+  border-radius: 15px;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.navigation ul li:hover {
+  text-decoration: none;
+}
+
+.navigation ul li.active {
+  background-color: #fafafa;
+  border: solid;
+  border: 1px solid;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
