--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,85 +4,92 @@
         <title>SELF MANAGEMENT(セルマネ)</title>
             <%= csrf_meta_tags %>
             <%= csp_meta_tag %>
-    
+            <script src="https://kit.fontawesome.com/f97bdf8bf2.js" crossorigin="anonymous"></script>
                 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
                 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
 
        <body>
-          <div id="wrapper">
-      
-              <header>
-                <nav class="navbar navbar-expand-lg">
-                 <div class="container">
-                    <%= link_to root_path do %>
-                    <%= image_tag "top.png", size: '240x180' %>
-                    <% end %>
-      
-                    <ul class="nav navbar-nav navbar-right">
-      
-                      <% if customer_signed_in? %>
-      
-                      <li style="font-family: HiraMinPro-W6; margin-top: 15px;">
-                      ようこそ、<%= current_customer.name  %>さん！
-                      </li>
-      
-                      <li>
-                      <%= link_to customers_my_page_path, class: "fas btn btn-light" do %>
-                      マイページ
-                      <% end %>
-                      </li>
-      
-                      <li>
-                      <%= link_to weights_path, class: "fas btn btn-light" do %>
-                      体重管理
-                      <% end %>
-                      </li>
-      
-                      <li>
-                      <%= link_to meals_path, class: "fas btn btn-light" do %>
-                      食事管理
-                      <% end %>
-                      </li>
-      
-                      <li>
-                      <%= link_to destroy_customer_session_path, method: :delete, class: "fas btn btn-light" do %>
-                      ログアウト
-                      <% end %>
-                      </li>
-      
-                      
-      
-                     <% else %>
-      
-                      <li>
-                      <%= link_to about_path, class: "fas btn btn-light" do %>
-                      セルマネについて
-                      <% end %>
-                      </li>
-      
+          <div class="container">
+              <div class="top">
+                  <h1>
+                      <%= link_to root_path do %>
+                          SELF MANAGEMENT
+                      <% end %>                        
+                  </h1>
+                
+                  
+                
+              </div>
 
-      
-                      <li>
-                        <%= link_to new_customer_registration_path, class: "fas btn btn-light" do %>
-                        新規登録
-                        <% end %>
-                      </li>
-      
-                      <li>
-                        <%= link_to new_customer_session_path, class: "fas btn btn-light" do %>
-                        ログイン
-                        <% end %>
-                      </li>
-                    <% end %>
-                    </ul>
-                </div>
-                </nav>
-              </header>
-      
+                    
+                  <div class="font-family">
+                      ようこそ、<%= current_customer.name  %>さん！ 
+                  </div>
+          </div>
+              <div class="navigation">
+          
+                  <header>
+                    
+    
+                          <ul class="nav navbar-nav navbar-right">
+            
+                            <% if customer_signed_in? %>
+                            
+                              <li class="list active">
+                              <%= link_to customers_my_page_path, class: "fas fa-user" do %>
+                              <span class="title">マイページ</span>
+                              <% end %>
+                              </li>
+                              
+                              <li class="list active">
+                              <%= link_to weights_path, class: "fas fa-weight" do %>
+                              <span class="title">体重管理</span>
+                              <% end %>
+                              </li>
+                              
+                              <li class="list active">
+                              <%= link_to meals_path, class: "fas fa-utensils" do %>
+                              <span class="title">食事管理</span>
+                              <% end %>
+                              </li>
+                              
+                              <li class="list active">
+                              <%= link_to destroy_customer_session_path, method: :delete, class: "fas fa-sign-out-alt" do %>
+                              <span class="title">ログアウト</span>
+                              <% end %>
+                              </li>
+        
+        
+                             <% else %>
+              
+                              <li>
+                              <%= link_to about_path, class: "fas btn btn-light" do %>
+                              セルマネについて
+                              <% end %>
+                              </li>
+              
+        
+              
+                              <li>
+                                <%= link_to new_customer_registration_path, class: "fas btn btn-light" do %>
+                                新規登録
+                                <% end %>
+                              </li>
+              
+                              <li>
+                                <%= link_to new_customer_session_path, class: "fas btn btn-light" do %>
+                                ログイン
+                                <% end %>
+                              </li>
+                            <% end %>
+                          </ul>
+                      
+                    
+                  </header>
+              </div>
               <main id="content">
                 <%= yield %>
               </main>
-          </div>
         </body>
 </html>
