--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-            <h10 style="background-color: #d3d3d3">マイページ</h10>
+        <div class="mx-auto col-11 col-sm-10 col-lg-8 ">
+            <h10 style="background-color: #3CB371">マイページ</h10>
         </div> 
-            <div class="mx-auto col-11 col-sm-10">
-                <strong class="information-link">登録情報</strong>
+            <div class="mx-auto col-11 col-sm-10 col-lg-8">
                     <%= link_to " 編集する", edit_customer_path(:id), class: "btn btn-success" %>
                         <table class="mx-auto  col-lg-8 col-xl-6 width: auto;table table-bordered table-condensed">
                             <tr>
