--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <h10 style="background-color: #d3d3d3">食事新規登録</h10>
+        <h10 style="background-color: #3CB371">食事新規登録</h10>
     </div>
 
         <div class="row">
