--- a/app/views/weights/edit.html.erb
+++ b/app/views/weights/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8">
-            <h10 style="background-color: #d3d3d3">
+            <h10 style="background-color: #3CB371">
                 登録した体重を編集する
             </h10>
                 <%= form_with model: @weight, url: weight_path(@weight.id), local: true , method: :patch do |f| %>
