--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,6 @@ body {
   border-radius: 30px;
   padding: 20px;
   margin: 10px;
-  color: #fff;
   float: left;
   text-align: center;
 }
@@ -49,35 +48,28 @@ body {
   color: #b8d200;
 }
 
-.top h1:hover {
-  color: white;
-  text-decoration: none;
-  opacity: 1;
-}
+
     
 
 .navigation {
-}
-
-
-.navigation:hover {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
   
 }
 
-.navigation ul {
-}
 
-.navigation ul li {
+.nav links {
+  display: flex;
+  text-decoration: none;
   list-style: none;
-  display: inline-block;
-  padding: 1px;
-  font-weight: bold;
+  padding: 2px;
 }
 
-.navigation ul li:hover {
-  
-}
 
-.navigation ul li.active {
 
+.container {
+  left: 30px;
+  height: 80px;
 }
