--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,43 +21,44 @@
               </div>
 
                     
-                  <div class="font-family">
-                      <%= current_customer.name %>さんでログイン中
-                  </div>
+
           </div>
               <div class="navigation">
           
                   <header>
                     
     
-                          <ul class="nav navbar-nav navbar-right">
+                          <ul class="nav links">
             
                             <% if customer_signed_in? %>
                             
                               <li class="list active">
-                              <%= link_to customers_my_page_path, class: "fas fa-user" do %>
+                              <%= link_to customers_my_page_path, class: "btn btn-success" do %>
                               <span class="title">マイページ</span>
                               <% end %>
                               </li>
                               
                               <li class="list active">
-                              <%= link_to weights_path, class: "fas fa-weight" do %>
+                              <%= link_to weights_path, class: "btn btn-success" do %>
                               <span class="title">体重管理</span>
                               <% end %>
                               </li>
                               
                               <li class="list active">
-                              <%= link_to meals_path, class: "fas fa-utensils" do %>
+                              <%= link_to meals_path, class: "btn btn-success" do %>
                               <span class="title">食事管理</span>
                               <% end %>
                               </li>
                               
                               <li class="list active">
-                              <%= link_to destroy_customer_session_path, method: :delete, class: "fas fa-sign-out-alt" do %>
+                              <%= link_to destroy_customer_session_path, method: :delete, class: "btn btn-danger" do %>
                               <span class="title">ログアウト</span>
                               <% end %>
                               </li>
-        
+                              
+                              <li class="font-family">
+                              <%= current_customer.name %>さんでログイン中
+                              </li>
         
                              <% else %>
               
