--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-      <h10 style="background-color: #3CB371">食事一覧・登録</h>
+      <h10 style="background-color: #3CB371">食事一覧・登録</h10>
     </div>
         <div class="row text-right">
-          <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-success btn-sm text-right ml-auto shadow-sm" %>
+          <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-info text-right ml-auto " %>
         </div>
 
             <div class="row">
