--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-            <h10 style="background-color: #d3d3d3">会員情報編集</h10>
+            <h10 style="background-color: #3CB371">会員情報編集</h10>
                 <%= form_with(model:@user, url:customer_path ,method: :PATCH) do |f| %>
                     <div>
                         <div class="col-xs-12">
