--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -22,7 +22,7 @@
                         </div>
                 
                             <div class="col-sm-2 mt-auto ml-5">
-                                <%= f.submit :新規登録, class: "btn btn-success" %>
+                                <%= f.submit :新規登録, class: "btn btn-info" %>
                             </div>
             
                 </div>
