--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-top">
     <div class="row">
         こんにちは！<br>
         SELF MANEGENT(セルマネ)をご覧頂きましてありがとうございます。<br>
