--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -2,30 +2,34 @@
     <div class="row">
       <h10 style="background-color: #3CB371">食事一覧・登録</h10>
     </div>
-        <div class="row text-right">
-          <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-info text-right ml-auto " %>
+        <div class="intro">
+            食事の登録を写真付きで登録することできます。
         </div>
-
-            <div class="row">
-                <table class="table table-hover text-center">
-                    <thead>
-                        <tr>
-                            <th>登録日時</th>
-                            <th>料理名</th>
-                            <th>食事写真</th>
-                
-                        </tr>
-                    </thead>
-            
-                        <tbody>
-                            <% @meals.reverse_each do |meal| %>
-                                <tr>
-                                    <td><%= meal.created_at.strftime('%Y/%m/%d') %></td>
-                                    <td><%= meal.dish_name %></td>
-                                    <td><%= attachment_image_tag meal, :image, :fill, 400, 300, format: "jpeg", fallback: "no-image.jpg", size: "200x200" %></td>
-                                </tr>
-                            <% end %>
-                        </tbody>
-                </table>
+            <div class="row text-right">
+              <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-info text-right ml-auto " %>
             </div>
+    
+                <div class="row">
+                    <table class="table table-hover text-center">
+                        <thead>
+                            <tr>
+                                <th>登録日時</th>
+                                <th>料理名</th>
+                                <th>食事写真</th>
+                    
+                            </tr>
+                        </thead>
+                
+                            <tbody>
+                                <% @meals.reverse_each do |meal| %>
+                                    <tr>
+                                        <td><%= meal.created_at.strftime('%Y/%m/%d') %></td>
+                                        <td><%= meal.dish_name %></td>
+                                        <td><%= attachment_image_tag meal, :image, :fill, 400, 300, format: "jpeg", fallback: "no-image.jpg", size: "200x200" %></td>
+                                    </tr>
+                                <% end %>
+                            </tbody>
+                    </table>
+                        <%= paginate @meals %>
+                </div>
 </div>
