--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -23,7 +23,7 @@
                             <td><%= current_customer.goal_weight %>kg</td>
                         </tr>
                     </table>
-                        <%= link_to " 編集する", edit_customer_path(:id), class: "btn btn-secondary text-right ml-auto" %>
+                        <%= link_to " 編集", edit_customer_path(:id), class: "btn btn-secondary text-right ml-auto" %>
                 </div>
       
     </div>
