--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -6,7 +6,7 @@
             食事の登録を写真付きで登録することできます。
         </div>
             <div class="row text-right">
-              <%= link_to "登録する", new_meal_path, class: "btn btn-lg btn btn-info text-right ml-auto " %>
+              <%= link_to "登録", new_meal_path, class: "btn btn-lg btn btn-info text-right ml-auto " %>
             </div>
     
                 <div class="row">
