--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,25 +1,27 @@
 <div class="container">
     <div class="row">
-       <div class="col-xl-7">
-         <h4>SELF MANEGENT(セルマネ)とは？</h4>
-         <p>
-            当アプリは、健康状態の管理、健康促進を目的としています。<br>
-            体重を管理したい方や、食事を管理しないといけない方など、<br>
-            皆様の健康に向けて簡単に記録できる内容ですので是非ご活用ください！<br>
-         </p>
-       </div>
-            <div class="col-xl-5">
-                <h4>作成者自己紹介</h4>
-                <%= image_tag "about.png", size: '200x200' %>
-                <h6>名前：FT</h6>
-                <h6>出身：大阪府</h6>
-                <h6>生まれ年：1997年</h6>
-　　　　　　　　<p>FTから一言：<br>FT自身が、健康管理への意識向けをより一層<br>高めないといけないというところから<br>このアプリを作成しました！皆さんも健康に<br>向けて、一緒に頑張りましょう！</p>
+        <div class="col-xl-7">
+            <h4 style="width: 530px;background-color: #3CB371">
+                SELF MANEGENT(セルマネ)とは？
+            </h4>
+                <p>
+                    当アプリは、健康状態の管理、健康促進を目的としています。<br>
+                    体重を管理したい方や、食事を管理しないといけない方など、<br>
+                    皆様の健康に向けて簡単に記録できる内容ですので是非ご活用ください！<br>
+                </p>
+        </div>
+            <div class="col-xl-7">
+                <%= image_tag "about1.jpg", size: '500x500' %>    
             </div>
-
-            </div>   
-
-    
-         
+                <div class="col-xl-5">
+                    <h4 style="width: 240px;background-color: #3CB371">
+                        作成者自己紹介
+                    </h4>
+                        <%= image_tag "about.png", size: '200x200' %>
+                        <h6>名前：FT</h6>
+                        <h6>出身：大阪府</h6>
+                        <h6>生まれ年：1997年</h6>
+        　　　　　　      　　<p>FTから一言：<br>FT自身が、健康管理への意識向けをより一層<br>高めないといけないというところから<br>このアプリを作成しました！皆さんも健康に<br>向けて、一緒に頑張りましょう！</p>
+                </div>
     </div>
 </div>
