--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,7 +3,7 @@
         こんにちは！<br>
         SELF MANEGENT(セルマネ)をご覧頂きましてありがとうございます。<br>
         新規登録、ログインは上記からしていただくようにお願いします。<br>
-        また内容だけ知りたい！という方には、「ゲストログイン」も<br>
+        また内容をまず知りたい！という方には、「ゲストログイン」も<br>
         利用ください（情報登録はできないのでご了承ください）。<br>
     </div>
 </div>
