--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,45 @@
-<h2>新規会員登録</h2>
+<div class="container">
+    <div class="row">
+        <h2 style="background-color: #3CB371">
+            新規会員登録
+        </h2>      
+    </div>
 
-<%= form_with model: @customer, url: customer_registration_path do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="field">
-      <%= f.label :name, "名前" %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-
-    </div><br>
+        <div class="row">
+            <%= form_with model: @customer, url: customer_registration_path do |f| %>
+                <%= render "devise/shared/error_messages", resource: resource %>
     
-    <div class="field">
-      <%= f.label :email, "メールアドレス"  %><br />        
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div><br>
+                    <div class="field">
+                      <%= f.label :name, "名前" %><br />
+                      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+                
+                    </div><br>
+        
+                        <div class="field">
+                          <%= f.label :email, "メールアドレス"  %><br />        
+                          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                        </div><br>
+    
+                            <div class="field">
+                              <%= f.label :password, "パスワード（6文字以上）"  %><br />
+                              <%= f.password_field :password, autocomplete: "new-password" %>
+                            </div><br>
+    
+                                <div class="field">
+                                  <%= f.label :password_confirmation, "パスワード（確認用）"  %><br />
+                                  <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                                </div><br>
+      
+                                    <div class="field">
+                                    <%= f.label :name, "目標の体重は？" %><br />
+                                    <%= f.text_field :goal_weight, autofocus: true, autocomplete: "goal_weight" %>kg
+                              
+                                    </div><br>
+    
+                                        <div class="actions">
+                                          <%= f.submit "新規登録", class: "btn btn-dark btn-lg center-block" %>
+                                        </div>
+            <% end %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password, "パスワード（6文字以上）"  %>
-    <% if @minimum_password_length %>
-    <em><%= @minimum_password_length %></em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "パスワード（確認用）"  %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  
-      <div class="field">
-      <%= f.label :name, "目標の体重は？" %><br />
-      <%= f.text_field :goal_weight, autofocus: true, autocomplete: "goal_weight" %>kg
-
-    </div><br>
-
-  <div class="actions">
-    <%= f.submit "新規登録", class: "btn btn-dark btn-lg center-block" %>
-  </div>
-<% end %>
+</div>
