--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -30,17 +30,19 @@
                 </thead>
         
                     <tbody>
-                        <% @weights.reverse_each do |weight| %>
+                        <% @weight.each do |weight| %>
                             <tr>
                                 <td><%= weight.created_at.strftime('%Y/%m/%d') %></td>
                                 <td><%= weight.current_weight %>kg</td>
-                                <td><%= (weight.current_weight - current_customer.goal_weight) %>kg</td>
+                                <td><%= (weight.current_weight.to_i - current_customer.goal_weight.to_i) %>kg</td>
                                 <td><%= link_to "編集", edit_weight_path(weight), class: "btn btn-success btn-sm" %></td>
                             </tr>
                         <% end %>
                     </tbody>
             </table>
-        <%= paginate @weights %> 
+            <%= paginate @weights %>  
     </div>
+
+    
 </div>
   
